--- a/Plugin-Hubspot.Test/Plugin-Hubspot.Test.csproj
+++ b/Plugin-Hubspot.Test/Plugin-Hubspot.Test.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentAssertions" Version="5.9.0" />
         <PackageReference Include="Grpc" Version="1.17.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
         <PackageReference Include="Moq" Version="4.10.1" />
