WIP: Added schema discovery and OAuth support

--- a/Plugin-Hubspot.Test/Plugin-Hubspot.Test.csproj
+++ b/Plugin-Hubspot.Test/Plugin-Hubspot.Test.csproj
@@ -23,7 +23,15 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Plugin" />
+      <None Update="TestData\contact.properties.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\companies.properties.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestData\deals.properties.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
