--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,9 @@
   "description": "Plugin for integrating data with Hubspot.com",
   "apiVersion": "2",
   "versionDescription": "Version 2",
-  "version": "1.0.0-beta3",
+  "version": "1.0.0-beta4",
   "iconFile": "icon.jpg",
-  "executable": "plugin-hubspot",
+  "executable": "Plugin-Hubspot",
   "kind": "publisher",
   "os": "$GOOS",
   "arch": "$GOARCH",
