WIP: Added globalization setting

--- a/Plugin-Hubspot/Plugin-Hubspot.csproj
+++ b/Plugin-Hubspot/Plugin-Hubspot.csproj
@@ -23,6 +23,10 @@
     </ItemGroup>
 
     <ItemGroup>
+        <RuntimeHostConfigurationOption Include="System.Globalization.Invariant" Value="true" />
+    </ItemGroup>
+
+    <ItemGroup>
       <Folder Include="Publisher" />
     </ItemGroup>
 
