WIP: Added read stream method

--- a/Plugin-Hubspot.Test/Plugin-Hubspot.Test.csproj
+++ b/Plugin-Hubspot.Test/Plugin-Hubspot.Test.csproj
@@ -32,6 +32,9 @@
       <None Update="TestData\deals.properties.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="TestData\contacts.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
