--- a/Plugin-Hubspot.Test/Plugin-Hubspot.Test.csproj
+++ b/Plugin-Hubspot.Test/Plugin-Hubspot.Test.csproj
@@ -35,6 +35,9 @@
       <None Update="TestData\contacts.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="TestData\companies.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
