--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "Plugin for integrating data with Hubspot.com",
   "apiVersion": "2",
   "versionDescription": "Version 2",
-  "version": "1.0.4-beta",
+  "version": "1.0.5",
   "iconFile": "icon.jpg",
   "executable": "Plugin-Hubspot",
   "kind": "publisher",
