feat(discover): added better support for discover error handling

--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,7 @@
   "kind": "publisher",
   "os": "$GOOS",
   "arch": "$GOARCH",
+  "canConfigure": true,
   "canProduceMultipleSchemas": true,
   "canAcceptQueryBasedSchemas": false,
   "canUseOAuth": true,
