--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,10 @@
     "ui": {
       "ui:order": [
         "ApiKey"
-      ]
+      ],
+      "ApiKey": {
+        "ui:widget": "password"
+      }
     },
     "schema": {
       "type": "object",
